--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <h2>
                     Quer me ver tocando no seu evento? <br>Deixe seu contato que eu te dou um alô!
                 </h2>
-                <form>
+                <form netlify>
                     <div>
                         <label for="nome"> nome:</label><br>
                         <input id="nome" type="text" placeholder="Qual seu nome?">
@@ -179,7 +179,7 @@
                         <input id="whatsapp" type="number" placeholder="Qual seu whats?">
                     </div>
                     <div>
-                        <button id="botaoEnviar">Fala comigo!</button>
+                        <button type="submit" id="botaoEnviar">Fala comigo!</button>
                     </div>
                 </form>
             </section>
