--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <h2>
                     Quer me ver tocando no seu evento? <br>Deixe seu contato que eu te dou um alô!
                 </h2>
-                <form netlify>
+                <form name="form-contato" method="POST" data-netlify="true">
                     <div>
                         <label for="nome"> nome:</label><br>
                         <input id="nome" type="text" placeholder="Qual seu nome?">
